--- a/frontend.css
+++ b/frontend.css
@@ -150,6 +150,9 @@ body {
 }
 
 .expanding-circle{
-  width: 100%;
-  margin-top: 50%;
+  position: absolute;
+  top: -100px;
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
 }
