--- a/frontend.css
+++ b/frontend.css
@@ -41,6 +41,10 @@ body {
   margin: auto;
 }
 
+.explorer-windows {
+  position: absolute;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -169,3 +173,5 @@ body {
   border-width: 2px;
   border-color: #000000;
 }
+
+
