--- a/dashboard/scripts/frontend.css
+++ b/dashboard/scripts/frontend.css
@@ -221,6 +221,14 @@ body {
   overflow: hidden;
 }
 
+.image-box{
+  width: 300px;
+  height: 100%;
+  background-color: #eee;
+  border-radius: 10px;
+  float: right;
+}
+
 /* Custom button crap */
 
 .btn-default {
