--- a/dashboard/test-scripts/test-script.css
+++ b/dashboard/test-scripts/test-script.css
@@ -15,3 +15,17 @@ body {
   padding: 0px;
   overflow: hidden;
 }
+
+.example-block {
+  background-color: #000;
+  position: absolute;
+  border-width: 1px;
+  border-color: #0000FF;
+  border-style: solid;
+}
+
+.example-manager {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
