--- a/dashboard/test-scripts/test-script.css
+++ b/dashboard/test-scripts/test-script.css
@@ -29,3 +29,20 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.example-sider {
+  position: absolute;
+  width: 0%;
+  height: 100%;
+  right: 0px;
+}
+
+.panel-base {
+  position: absolute;
+  background-color: #000;
+  border-width: 1px;
+  border-right-width: 0px;
+  border-color: #FF0000;
+  border-style: solid;
+  right: 0px;
+}
